// Copyright 2019 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package led;
option go_package = "infra/tools/led;main";

import "go.chromium.org/luci/buildbucket/proto/launcher.proto";
import "go.chromium.org/luci/swarming/proto/api/swarming.proto";

// Buildbucket is, ideally, just a BBAgentArgs, but there are bits of data that
// led needs to track which aren't currently contained in BBAgentArgs.
//
// Where it makes sense, this additional data should be moved from this
// Buildbucket message int BBAgentArgs, but for now we store it separately to
// get led v2 up and running.
message Buildbucket {
  buildbucket.v2.BBAgentArgs bbagent_args = 1;

  repeated swarming.v1.CIPDPackage cipd_packages = 2;

  repeated swarming.v1.StringPair env_vars = 3;
  repeated swarming.v1.StringListPair env_prefixes = 4;

  // Indicates that this build should be generated as a legacy kitchen task when
  // launched.
  bool legacy_kitchen = 5;

  // Eventually becomes the name of the launched swarming task.
  string name = 6;
}

// Swarming is the raw TaskRequest. When a JobDefinition is in this form, the
// user's ability to manipulate it via `led` subcommands is extremely limited.
message Swarming {
  swarming.v1.TaskRequest task = 1;

  string hostname = 2;
}

message JobDefinition {
  oneof job_type {
    // Represents a buildbucket-native task; May be recovered from a swarming
    // task, or provided directly via buildbucket.
    Buildbucket buildbucket = 1;

    // Represents a swarming task. This will be filled for jobs sourced directly
    // from swarming which weren't recognized as a buildbucket task.
    //
    // A limited subset of the
    Swarming swarming = 2;
  }

  // If set, this holds the CASTree to use with the build, when launched.
  //
  // At the time of launch, this will be merged with
  // swarming.task_slice[*].properties.cas_inputs, if any.
  swarming.v1.CASTree user_payload = 3;
}
